# TaskFlow

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  package.json
cmake/: bcrypt.cmake  compileFlags.cmake
data/: database.sql
src/: App.js  Static.hpp  main.cpp
src/Api/: RouteManager.cpp  RouteManager.hpp
src/Database/: Database.cpp  Database.hpp  DatabaseHelper.cpp  DatabaseHelper.hpp  TaskManager.cpp  TaskManager.hpp
src/Database/Models/: Model.hpp  Tags.cpp  Tags.hpp  Tasks.cpp  Tasks.hpp  User.cpp  User.hpp
src/Utils/: Logger.hpp  SafeInvoke.hpp  Singleton.hpp  SourceLocation.hpp  Utils.cpp  Utils.hpp
src/Utils/Core/: Singleton.hpp
src/Utils/Logger/: Logger.hpp  LoggerFormat.hpp
src/Utils/Meta/: SafeInvoke.hpp  SourceLocation.hpp
tests/: CMakeLists.txt  Model_test.hpp  Model_test_2.hpp  test  test.cpp  test_database.cpp  test_logger.cpp  test_models.cpp  test_threading.cpp
